portfolio/src/components/assets/index.css
* {
  margin: 0;
  padding: 0;
}

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

#root{
  height: 100vh;
  width: 100vw;
  background-image: url("../assets/milky-way-starry-sky-night-mountains-lake-reflection-cold-5k-5760x3840-287.jpg");
  background-size: cover;
  background-repeat: no-repeat;
}

header{
  width: 100%;
  height: 100px;
  display: flex;
  align-items: center;
  justify-content: space-around
}

header h1{
  font-size: 30px;
  color: white;
}

nav{
  display: flex;
  align-items: center;
  width: 40%;
  justify-content: space-evenly;
  font-family: monospace;
}

nav a{
  font-family: "Varela Round", sans-serif;
  font-size: 30px;
  text-decoration: none;
  color: rgb(255, 255, 255);
}

nav a:hover{
  text-shadow:
    0 0 7px #fff,
    0 0 10px #fff,
    0 0 21px #fff,
    0 0 42px #ffffff6b,
    0 0 82px #ffffff6b,
    0 0 92px #ffffff6b,
    0 0 102px #ffffff6b,
    0 0 151px #ffffff6b;
}

.about{
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 50%;
  margin: 100px auto;
}

.profile-pic {
  width: 150px;
  height: 150px;
  border-radius: 100%;

  --color: white; /* the color of the border */
  --border: 5px;   /* the thickness of the border */
  --offset: 30px;   
  --gap: 5px;       
  
  border-radius: 50%;
  cursor: pointer;
  padding: calc(var(--border) + var(--gap));
  border: var(--offset) solid #0000;
  --_m: radial-gradient(50% 50%, #000 calc(100% - var(--offset)),#0000 calc(100% - var(--border)));
  -webkit-mask: var(--_m);
          mask: var(--_m);
  --_g: #0000 calc(99% - var(--border)), var(--color) calc(100% - var(--border)) 99%,#0000;
  --_s: var(--offset);
  --_r: 100% 100% at;
  background:
    radial-gradient(var(--_r) 0    0   ,var(--_g)) calc(100% + var(--_s)) calc(100% + var(--_s)),
    radial-gradient(var(--_r) 100% 0   ,var(--_g)) calc(0%   - var(--_s)) calc(100% + var(--_s)),
    radial-gradient(var(--_r) 0    100%,var(--_g)) calc(100% + var(--_s)) calc(0%   - var(--_s)),
    radial-gradient(var(--_r) 100% 100%,var(--_g)) calc(0%   - var(--_s)) calc(0%   - var(--_s));
  background-size: 50% 50%;
  background-repeat: no-repeat;
  transition: .5s;
}
.profile-pic:hover {
  --_s: 0px
}

.name-header{
  font-size: 70px;
  color: white;
}

.about p{
  color: rgb(216, 213, 213);
  text-align: center;
  font-size: 20px;
  margin: 10px 0
}

.white-span{
  color: rgb(255, 255, 255);
  text-shadow:
    0 0 7px #fff,
    0 0 10px #fff,
    0 0 21px #fff,
    0 0 42px #ffffff6b,
    0 0 82px #ffffff6b,
    0 0 92px #ffffff6b,
    0 0 102px #ffffff6b,
    0 0 151px #ffffff6b;
}

footer{
  width: 15%;
  display: flex;
  justify-content: space-evenly;
  position: absolute;
  bottom: 50px;
  left: 50%;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

footer img{
  width: 50px;
  height: 50px;

  --color: white; /* the color of the border */
  --border: 5px;   /* the thickness of the border */
  --offset: 30px;   
  --gap: 5px;       
  
  border-radius: 50%;
  cursor: pointer;
  padding: calc(var(--border) + var(--gap));
  border: var(--offset) solid #0000;
  --_m: radial-gradient(50% 50%, #000 calc(100% - var(--offset)),#0000 calc(100% - var(--border)));
  -webkit-mask: var(--_m);
          mask: var(--_m);
  --_g: #0000 calc(99% - var(--border)), var(--color) calc(100% - var(--border)) 99%,#0000;
  --_s: var(--offset);
  --_r: 100% 100% at;
  background:
    radial-gradient(var(--_r) 0    0   ,var(--_g)) calc(100% + var(--_s)) calc(100% + var(--_s)),
    radial-gradient(var(--_r) 100% 0   ,var(--_g)) calc(0%   - var(--_s)) calc(100% + var(--_s)),
    radial-gradient(var(--_r) 0    100%,var(--_g)) calc(100% + var(--_s)) calc(0%   - var(--_s)),
    radial-gradient(var(--_r) 100% 100%,var(--_g)) calc(0%   - var(--_s)) calc(0%   - var(--_s));
  background-size: 50% 50%;
  background-repeat: no-repeat;
  transition: .5s;
  filter: brightness(0) invert(1);
  position: relative;
  top: 100px;

}

footer img:hover{
  --_s: 0px
}

.contact{
  height: 65%;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  position: absolute;
  top: 45%;
  left: 50%;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  border-left: 5px solid white;
  padding-left: 25px
}

.contact h3{
  font-size: 60px;
  color: white;
  position: absolute;
  left: -160px;
  transform: rotate(-90deg);

}

.contact p{
  color: white;
  font-size: 25px;
  position: relative;
  margin-bottom: 10px;
}

.contact input{
  width: 400px;
  height: 35px;
  padding: 5px;
  border-radius: 12px;
  border: 1px solid black
}

.contact textarea{
  width: 380px;
  height: 250px;
  resize: none;
  padding: 15px;
  border-radius: 12px;
}

.contact button{
  width: 175px;
  height: 45px;
  border-radius: 12px;
  background-color: rgb(165, 165, 165);
  border: none;
  margin: 15px 0 0 115px;
  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
  font-size: 20px;
  font-weight: bold;
  color: rgb(31, 31, 31)
}

.projects{
  width: 90%;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
  margin: auto;
}

.project-container{
  width: 30%;
  height: 20%;
  position: relative;
  margin-top: 50px;
}

.project-image{
  width: 100%;
  border-radius: 28px;
}

.project-links{
  position: absolute;
  top: 50px;
  left: 25px;
}

.project-name{
  text-decoration: none;
  color: rgb(190, 190, 190);
  font-size: 40px;
}

.project-name:hover{
  color: white;
}

.project-icon{
  width: 42px;
  filter: invert(0.75);
  position: relative;
  top: 8px;
}

.project-icon:hover{
  filter: invert(1)
}

.project-description{
  text-decoration: none;
  color: rgb(190, 190, 190);
  font-size: 25px;
  position: absolute;
  top: 90px;
  left: 75px;
}

.project-links{
  display: none;
}

.project-container:hover .project-image{
  filter: brightness(5%);
  transition: .5s;
}

.project-container:hover .project-links{
  display: block;
}

